--- a/index.htm
+++ b/index.htm
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
 
@@ -394,7 +394,7 @@
                 <div class="timeline_box complete">
                   <div class="timeline_inner">
                     <div class="timeline_circle"></div>
-                    <h6 class="animation" data-animation="fadeInUp" data-animation-delay="0.3s">Q2 2022</h6>
+                    <h6 class="animation" data-animation="fadeInUp" data-animation-delay="0.3s">Q1 2022</h6>
                     <p class="animation" data-animation="fadeInUp" data-animation-delay="0.4s">Business and corporate pre-sale for AMZ</p>
                   </div>
                 </div>
@@ -403,7 +403,7 @@
                 <div class="timeline_box complete current">
                   <div class="timeline_inner">
                     <div class="timeline_circle"></div>
-                    <h6 class="animation" data-animation="fadeInUp" data-animation-delay="0.3s">Q3 2022</h6>
+                    <h6 class="animation" data-animation="fadeInUp" data-animation-delay="0.3s">Q2 2022</h6>
                     <p class="animation" data-animation="fadeInUp" data-animation-delay="0.4s">Pre-Sale and AMZ bonus program</p>
                   </div>
                 </div>
@@ -662,6 +662,11 @@
 <script src="assets/js/scripts.js"></script>
 
 
+
+
+
+
+
 <!-- Smartsupp Live Chat script -->
 <script type="text/javascript">
   var _smartsupp = _smartsupp || {};
@@ -673,6 +678,17 @@
     c.src='https://www.smartsuppchat.com/loader.js?';s.parentNode.insertBefore(c,s);
   })(document);
   </script>
+
+
+
+
+
+
+
+
+
+
+
 
 </body>
 </html>
