--- a/index.htm
+++ b/index.htm
@@ -272,9 +272,9 @@
                         	<a href="swap/index.htm" class="btn btn-default btn-radius animation" data-animation="fadeInUp" data-animation-delay="1.4s">Buy Tokens <i class="ion-ios-arrow-thin-right"></i></a>
                             <ul class="icon_list list_none d-flex justify-content-center">Purchase with: 
                                      <li class="animation" data-animation="fadeInUp" data-animation-delay="1.5s"><i class="cc BTC-alt"></i><span></span></li>
-				     <li class="animation" data-animation="fadeInUp" data-animation-delay="1.6s"><i class="cc ETC"></i><span>Ethereum </span></li>
-                                     <li class="animation" data-animation="fadeInUp" data-animation-delay="1.7s"><i class="cc"><img width="16px;" src="./bnb.png"></i><span>BNB</span></li>
-                                     <li class="animation" data-animation="fadeInUp" data-animation-delay="1.8s"><i class="cc XRP-alt"></i><span>Ripple</span></li>
+				     <li class="animation" data-animation="fadeInUp" data-animation-delay="1.6s"><i class="cc ETC"></i><span></span></li>
+                                     <li class="animation" data-animation="fadeInUp" data-animation-delay="1.7s"><i class="cc"><img width="16px;" src="./bnb.png"></i><span></span></li>
+                                     <li class="animation" data-animation="fadeInUp" data-animation-delay="1.8s"><i class="cc XRP-alt"></i><span></span></li>
                         </div>
                 	</div>
                 </div>  
@@ -290,7 +290,7 @@
                 </div>
                 <div class="pr_box">
                         <h6 class="animation" data-animation="fadeInUp" data-animation-delay="1s">Acceptable Currency :</h6>
-                        <p class="animation" data-animation="fadeInUp" data-animation-delay="1.2s">BTC</p>
+                        <p class="animation" data-animation="fadeInUp" data-animation-delay="1.2s">BTC, ETH, BNB, RXP</p>
                     </div>
             </div>
         </div>
