--- a/index.htm
+++ b/index.htm
@@ -397,7 +397,7 @@
                 <div class="timeline_box complete">
                   <div class="timeline_inner">
                     <div class="timeline_circle"></div>
-                    <h6 class="animation" data-animation="fadeInUp" data-animation-delay="0.3s">Q1 2022</h6>
+                    <h6 class="animation" data-animation="fadeInUp" data-animation-delay="0.3s">Q2 2022</h6>
                     <p class="animation" data-animation="fadeInUp" data-animation-delay="0.4s">Business and corporate pre-sale for AMZ</p>
                   </div>
                 </div>
@@ -433,7 +433,7 @@
                 <div class="timeline_box">
                   <div class="roadmap_inner">
                     <div class="timeline_circle"></div>
-                    <h6 class="animation" data-animation="fadeInUp" data-animation-delay="0.3s">Q4 2022 - 2023</h6>
+                    <h6 class="animation" data-animation="fadeInUp" data-animation-delay="0.3s">Q4 2022 - Q1 2023</h6>
                     <p class="animation" data-animation="fadeInUp" data-animation-delay="0.4s">AMZ integration in all shops</p>
                   </div>
                 </div>
